tests/ui/string_wrong_type.stderr
error[E0308]: mismatched types
 --> tests/ui/string_wrong_type.rs:3:10
  |
3 | #[derive(StringIdentifier)]
  |          ^^^^^^^^^^^^^^^^
  |          |
  |          expected `&str`, found `&u64`
  |          expected `&str` because of return type
  |
  = note: expected reference `&str`
             found reference `&u64`
  = note: this error originates in the derive macro `StringIdentifier` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/string_wrong_type.rs:3:10
  |
3 | #[derive(StringIdentifier)]
  |          ^^^^^^^^^^^^^^^^
  |          |
  |          expected `u64`, found `String`
  |          arguments to this function are incorrect
  |
note: tuple struct defined here
 --> tests/ui/string_wrong_type.rs:5:8
  |
5 | struct BadId(u64);
  |        ^^^^^
  = note: this error originates in the derive macro `StringIdentifier` (in Nightly builds, run with -Z macro-backtrace for more info)
