tests/ui/string_wrong_type.rs
use identifiers::StringIdentifier;

#[derive(StringIdentifier)]
#[validate(non_empty)]
struct BadId(u64);

fn main() {}
